--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
                         <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Produits</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Qui sommes-nous?</a>
                       </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
-                      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                      <input class="form-control mr-sm-2" type="search" placeholder="Recherche" aria-label="Search">
                       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                   </div>
                 </nav>
-            <section class="jumbotron jumbotron-fluid mb-0">
+            <section class="jumbotron jumbotron-fluid mb-2">
                   <article class="container">
                         <h1>Hackers Poulette</h1>
                         <h2>Best ref ds la vente de rasberry</h2>
                         <figure>
-                              <img src="" alt="">
+                              <img id="kit"  src="assets/img/kit.jpg" alt="kit rasb">
                         </figure>
-                        <h4>Ce mois-ci</h4>
-                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, consectetur atque! Necessitatibus, omnis velit iusto alias ipsam numquam sint laudantium totam eius aut corrupti consectetur dolorum odio maiores fugiat natus.</p>
+                        <h4 >Ce mois-ci</h4>
+                        <p class="w-50 h-50"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, consectetur atque! Necessitatibus, omnis velit iusto alias ipsam numquam sint laudantium totam eius aut corrupti consectetur dolorum odio maiores fugiat natus.</p>
                         <button class="btn">Voir le kit</button>         
                   </article>
             </section>
