--- a/index.html
+++ b/index.html
@@ -195,8 +195,83 @@
                   </div>
               </section>        
       </main>
-      <footer  class="container-fluid">
-            
+      <footer class="page-footer font-small bg-light lighten-3 pt-4 container-fluid">
+            <div class="container text-center text-md-left">
+                  <div class="row">
+                        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+                              <h5 class="font-weight-bold text-uppercase mb-4">Hackers Poulette</h5>
+                              <p>Here you can use rows and columns to organize your footer content.</p>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit amet numquam iure provident voluptate
+                              esse
+                              quasi, veritatis totam voluptas nostrum.</p>
+                        </div>
+                        <hr class="clearfix w-100 d-md-none">
+                        <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+                              <h5 class="font-weight-bold text-uppercase mb-4">SITE</h5>
+                              <ul class="list-unstyled">
+                              <li>
+                              <p>
+                                    <a href="#products">Produits</a>
+                              </p>
+                              </li>
+                              <li>
+                              <p>
+                                    <a href="#who">A propos</a>
+                              </p>
+                              </li>
+                              <li>
+                              <p>
+                                    <a href="#contact">Liens</a>
+                              </p>
+                              </li>
+                              <!-- <li>
+                              <p>
+                                    <a href="#!">Panier</a>
+                              </p>
+                              </li> -->
+                              </ul>
+                        </div>
+                        <hr class="clearfix w-100 d-md-none">
+                        <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+                              <h5 class="font-weight-bold text-uppercase mb-4">Adresse</h5>
+                              <ul class="list-unstyled">
+                              <li>
+                              <p>
+                                    <i class="fas fa-home mr-3"></i>Coq d'Or, Charleroi, BE</p>
+                              </li>
+                              <li>
+                              <p>
+                                    <i class="fas fa-envelope mr-3"></i> hackerspoulette@gmail.com</p>
+                              </li>
+                              <li>
+                              <p>
+                                    <i class="fas fa-phone mr-3"></i> +04 234 567 88</p>
+                              </li>
+                              <li>
+                              <p>
+                                    <i class="fas fa-print mr-3"></i> +02 232 657 89</p>
+                              </li>
+                              </ul>
+                        </div>
+                        <hr class="clearfix w-100 d-md-none">
+                        <div class="col-md-2 col-lg-3 text-center mx-auto my-4">
+                              <h5 class="font-weight-bold text-uppercase mb-4">Suivez-nous</h5>
+                              <a href="https://www.facebook.com" type="button" class="btn-floating btn-fb">
+                              <i class="fab fa-facebook-f fa-2x"></i>
+                              </a>
+                              <a href="https://www.twitter.com" type="button" class="btn-floating btn-tw">
+                              <i class="fab fa-twitter fa-2x"></i>
+                              </a>
+                              <a href="https://www.google.com" type="button" class="btn-floating btn-gplus">
+                              <i class="fab fa-google-plus-g fa-2x"></i>
+                              </a>
+                              <a href="https://www.dribble.com" type="button" class="btn-floating btn-dribbble">
+                              <i class="fab fa-dribbble fa-2x"></i>
+                              </a>
+                        </div>
+                  </div>
+            </div>
+            <div class="footer-copyright text-center py-3">© 2020 Copyright:<a href="#"> HackersPoulette.com</a></div>          
       </footer>
       
 </body>
