--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </nav>
             <section class="jumbotron jumbotron-fluid  p-3 text-center border shadow-sm  ">
                   <article id="jumbo" class="container-fluid row p-3">
-                        <div class=" col-lg-6 text-center">
-                              <h1 class="mb-3 font-weight-bold">Hackers Poulette</h1>
+                        <div class="col-lg-6 text-center">
+                              <h1 id="bat" class="  mb-3 font-weight-bold">Hackers Poulette</h1>
                               <h2 class="mb-4">Best selling reference for<br>Rasberry accessories</h2>
                               <h4 class="mb-4 font-weight-bold"> Ce mois-ci:</h4>
                               <p id="kitdescribe" class="text-justify"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, consectetur atque!
@@ -85,8 +85,7 @@
                         </div>
                         <div class="card-body ">
                               <h4 class="card-title">2,5€</h4>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                              content.</p>
+                              <p class="card-text">L'ensemble de l'enveloppe extérieure est moulé par injection à partir d'un matériau ABS. La boîte inférieure est conçue avec un trou d'avion monté au mur, qui peut être fixé par n'importe quel mur. La surface est lisse et exquise, et la fente de carte bouclée est parfaitement conçue.</p>
                               <a href="#" class="btn btn-outline-light font-weight-bold">Plus</a>
                         </div>
                   </div>
@@ -100,8 +99,7 @@
                         </div>
                         <div class="card-body ">
                               <h4 class="card-title">12€</h4>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                              content.</p>
+                              <p class="card-text">Construit avec une coque en aluminium mince de qualité supérieure et une gaine en nylon tressée de haute qualité, ce câble HDMI peut résister à plus de 10 000 flexions sans réduire la flexibilité du câble et assurer les meilleures performances possibles. Lorem ipsum dolor sit amet.</p>
                               <a href="#" class="btn btn-outline-light font-weight-bold">Plus</a>
                         </div>
                   </div>
@@ -115,8 +113,7 @@
                         </div>
                         <div class=" card-body">
                               <h4 class="card-title">9€</h4>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                              content.</p>
+                              <p class="card-text">Raspberry Pi 4 modèle B avec processeur quad-core A72 à 1,5 GHz, New Soc BCM2711. Nouvelle mise à jour basée sur le Raspberry Pi 3 B. Bande passante triplée (filaire et sans fil) et capacité à maintenir des performances élevées plus longtemps. Sans ventilateur.</p>
                               <a href="#" class="btn btn-outline-light font-weight-bold">Plus</a>
                         </div>
                   </div>
@@ -130,8 +127,7 @@
                         </div>
                         <div class=" card-body">
                               <h4 class="card-title">3€</h4>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                              content.</p>
+                              <p class="card-text">Les cartes microSDHC et microSDXC SanDisk Ultra sont rapides pour la réalisation de meilleures photos, des performances applicatives optimales et de la vidéo Full HD.</p>
                               <a href="#" class="btn btn-outline-light font-weight-bold">Plus</a>
                         </div>
                   </div>
@@ -144,9 +140,8 @@
                               </a>
                         </div>
                         <div class=" card-body">
-                              <h4 class="card-title">5,5€</h4>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                              content.</p>
+                              <h4 class="card-title">19€</h4>
+                              <p class="card-text">Raspberry Pi 3 Model B+ - Carte mère ultra-compacte avec processeur ARM Cortex-A53 Quad-Core 1.4 GHz - RAM 1 Go - HDMI - 4x USB 2.0 - Gigabit Ethernet - Wi-Fi AC Dual Band - Bluetooth 4.2.</p>
                               <a href="#" class="btn btn-outline-light font-weight-bold">Plus</a>
                         </div>
                   </div>
@@ -159,9 +154,8 @@
                               </a>
                         </div>
                         <div class=" card-body">
-                              <h4 class="card-title">19€</h4>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                              content.</p>
+                              <h4 class="card-title">5,5€</h4>
+                              <p class="card-text">Dissipateur thermique en cuivre Pi 2/3 framboise avec pâte spéciale de refroidissement thermique 3M. apportera à votre module une parfaite dissipation de la chaleur.</p>
                               <a href="#" class="btn btn-outline-light font-weight-bold">Plus</a>
                         </div>
                   </div>
@@ -324,6 +318,9 @@
             <div class="footer-copyright text-center py-3">© 2020 Copyright:<a id="hack" href="#"> HackersPoulette.com</a></div>          
       </footer>
       <script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
