--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   </button>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light font-weight-bold ">
-                  <a class="navbar-brand " href="#who"><img class="ml-3" src="assets/img/hackers-poulette-logoresize.png" alt="image hacker poulette"></a>
+                  <a class="navbar-brand " href="#who"><img class="ml-3" src="assets/img/hackers-poulette-logoresize.png" alt="logo hacker poulette"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -62,7 +62,7 @@
                               <button class="btn btn-outline-light font-weight-bold mb-2">Voir le kit</button>    
                         </div>
                         <figure class="col-lg-5 text-center">
-                              <img class="rounded mx-auto d-block" id="kit" src="assets/img/kit.jpg" alt="kit rasb">
+                              <img class="rounded mx-auto d-block" id="kit" src="assets/img/kit.jpg" alt="kit rasberry">
                         </figure>
                   </article>
             </section>
@@ -78,7 +78,7 @@
                   <div class="col-lg-3 card m-3" >
                         <div class="view overlay">
                               <img class="card-img-top" src="assets/img/fan.jpg"
-                              alt="Card image cap">
+                              alt="Tournevis + ventilateur">
                               <a href="#!">
                               <div class="mask rgba-white-slight"></div>
                               </a>
@@ -92,7 +92,7 @@
                   <div class="col-lg-3 card m-3" >
                         <div class="view overlay ">
                               <img class="card-img-top" src="assets/img/hdmi.jpg"
-                              alt="Card image cap">
+                              alt="Cable HDMI">
                               <a href="#!">
                               <div class="mask rgba-white-slight"></div>
                               </a>
@@ -106,7 +106,7 @@
                   <div class="col-lg-3 card m-3">
                         <div class="view overlay">
                               <img class="card-img-top" src="assets/img/case.jpg"
-                              alt="Card image cap">
+                              alt="Boitier rasberry">
                               <a href="#!">
                               <div class="mask rgba-white-slight"></div>
                               </a>
@@ -120,7 +120,7 @@
                   <div class="col-lg-3 card m-3">
                         <div class="view overlay">
                               <img class="card-img-top" src="assets/img/card.jpg"
-                              alt="Card image cap">
+                              alt="Carte SD">
                               <a href="#!">
                               <div class="mask rgba-white-slight"></div>
                               </a>
@@ -134,7 +134,7 @@
                   <div class="col-lg-3 card m-3">
                         <div class="view overlay">
                               <img class="card-img-top" src="assets/img/rasp.jpg"
-                              alt="Card image cap">
+                              alt="Carte mère rasberry">
                               <a href="#!">
                               <div class="mask rgba-white-slight"></div>
                               </a>
@@ -148,7 +148,7 @@
                   <div class="col-lg-3 card m-3">
                         <div class="view overlay">
                               <img class="card-img-top" src="assets/img/heat.jpg"
-                              alt="Card image cap">
+                              alt="diffuseur chaleur">
                               <a href="#!">
                               <div class="mask rgba-white-slight"></div>
                               </a>
