--- a/index.html
+++ b/index.html
@@ -245,14 +245,9 @@
                   </div>
               </section>
       </main>
-      <section class="container-fluid p-0" id="video">
-            <div class="parallax">
-                  <p>zzzz</p>
-                  <!-- <video src="assets/img/Futuristic - 896.mp4" autoplay muted loop></video> -->
-            </div>
-            
-
-      </section>
+      <div class="container-fluid p-0" id="video">
+            <video src="assets/img/futu.mp4" autoplay muted loop></video>
+      </div>
       <footer class="page-footer shadow-sm font-small bg-light lighten-3 pt-4 container-fluid">
             <div class="container text-center text-md-left">
                   <div class="row">
