Formulaire intégré et fonctionnel

--- a/ressources/nationality.html
+++ b/ressources/nationality.html
@@ -1,4 +1,4 @@
-<select name="nationality">
+<select id="nationality" name="nationality">
   <option value="">-- Nationality --</option>
   <option value="afghan">Afghan</option>
   <option value="albanian">Albanian</option>
